...
    <string name="settings_security_and_privacy_account_delete">Delete</string>

    <string name="settings_security_and_privacy_account_delete_summary">"Deleting your account means deleting all your saved accounts online. You can always recreate your account once needed.     "</string>

    <!-- settings language -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_farsi">Farsi</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_german">German</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_swahili">Swahili</string>
...
    <string name="about">About</string>
    <string name="recents_text">Recents</string>
    <string name="get_started_text">Get started</string>
    <string name="platforms">Platforms</string>
    <string name="inbox">Inbox</string>
    <string name="countries">Countries</string>
    <string name="settings">Settings</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="add_gateway_client">Add Gateway Client</string>
    <string name="edit_gateway_client">Edit Gateway Client</string>
    <string name="e_g_237123456_or_select_contact">e.g +237123456 or select contact</string>
    <string name="alias_optional">Alias (optional)</string>
    <string name="name_to_help_remember_the_gateway_client">Name to help remember the Gateway Client</string>
...
    <string name="this_would_delete_your_auth_codes_stored_for_aliasing_you_can_request_for_another_code_at_anytime">This would delete your auth codes stored for aliasing. You can request for another code at anytime.</string>
    <string name="logout">Logout</string>
    <string name="logout_of_your_account_you_can_always_log_back_in_however_your_current_messages_would_be_deleted">Logout of your account. You can always log back in, however your current messages would be deleted.</string>
    <string name="delete_">Delete</string>
    <string name="deleting_your_account_means_deleting_all_your_saved_accounts_online_you_can_always_recreate_your_account_once_needed">Deleting your account means deleting all your saved accounts online. You can always recreate your account once needed.</string>
    <string name="accessibility">Accessibility</string>
    <string name="language">Language</string>
    <string name="messaging_">Messaging</string>
    <string name="security_and_privacy">Security and Privacy</string>
    <string name="security">Security</string>
    <string name="enable_app_locks_and_pin_codes">Enable app locks and pin codes</string>

    <string name="english">English</string>
...
    <string name="korean">Korean</string>
    <string name="hindi">Hindi</string>
    <string name="shona">Shona</string>

    <string name="welcome_to_relaysms_">Welcome to RelaySMS!</string>
    <string name="use_sms_to_make_a_post_send_emails_and_messages_with_no_internet_connection">Use SMS to make a post, send emails and messages with no internet connection</string>
    <string name="learn_how_it_works_">Learn how it works</string>
    <string name="read_our_privacy_policy">Read our privacy policy</string>
    <string name="skip">Skip</string>
    <string name="you_are_ready_to_begin_sending_messages_from_relaysms">You are ready to begin sending messages from RelaySMS</string>
    <string name="great">Great!</string>
    <string name="relaysms_vaults_securely_stores_your_online_accounts_so_that_you_can_access_them_without_an_internet_connection">RelaySMS Vaults securely stores your online accounts, so that you can access them without an internet connection</string>
    <string name="you_can_add_online_accounts_to_your_vault">You can add online accounts to your vault</string>
    <string name="ok">OK</string>
    <string name="make_default">Make default</string>
...
    <string name="when_adding_accounts_for_platforms_that_utilize_oauth2_0_e_g__x_enabling_this_makes_sure_your_access_tokens_are_rather_stored_on_your_current_device">When adding accounts for platforms that utilize OAuth2.0 enabling this makes sure your access tokens are rather stored on your current device</string>
    <string name="stored_tokens_detected_title">Stored Tokens Detected</string>
    <string name="stored_tokens_dialog_message_part1">Stored tokens for this</string>
    <string name="stored_tokens_dialog_message_part2">account have been detected. You can use your stored tokens to make a post on</string>
    <string name="stored_tokens_dialog_message_part3">just ONCE. As long as the \"Store Tokens on Device\" setting is on, you\'ll be able to make X posts just once. To make more posts with this account, revoke and add this account again for every post.</string>
    <string name="stored_tokens_dialog_note">Note: Turning off the \"Store Tokens on Device\" feature while making sure you have tokens stored online would allow you to make multiple posts on X without having to revoke and store again.</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="close_search">Close Search</string>
    <string name="back">Back</string>
    <string name="report_bug_feedback">Report Bug/Feedback</string>
    <string name="recents">Recents</string>
    <string name="select_language">Select Language</string>
...
